# auth

./: .coverage  .gitignore  .gitmodules  README.md  Taskfile.yaml  Taskfile.yml  Taskfileyaml.txt  alembic.ini  auth.py  database.py  models.py  pixi.toml  pyproject.toml  pytest.ini  user.db
htmlcov/: auth_py.html  class_index.html  database_py.html  function_index.html  index.html  models_py.html  status.json  z_12bbcc9183fda942__weakrefset_py.html  z_12bbcc9183fda942_argparse_py.html  z_12bbcc9183fda942_ast_py.html  z_12bbcc9183fda942_base64_py.html  z_12bbcc9183fda942_calendar_py.html  z_12bbcc9183fda942_cmd_py.html  z_12bbcc9183fda942_code_py.html  z_12bbcc9183fda942_codeop_py.html  z_12bbcc9183fda942_colorsys_py.html  z_12bbcc9183fda942_contextlib_py.html  z_12bbcc9183fda942_copy_py.html  z_12bbcc9183fda942_copyreg_py.html  z_12bbcc9183fda942_crypt_py.html  z_12bbcc9183fda942_dataclasses_py.html  z_12bbcc9183fda942_enum_py.html  z_12bbcc9183fda942_fnmatch_py.html  z_12bbcc9183fda942_fractions_py.html  z_12bbcc9183fda942_functools_py.html  z_12bbcc9183fda942_gettext_py.html  z_12bbcc9183fda942_hmac_py.html  z_12bbcc9183fda942_inspect_py.html  z_12bbcc9183fda942_linecache_py.html  z_12bbcc9183fda942_locale_py.html  z_12bbcc9183fda942_mimetypes_py.html  z_12bbcc9183fda942_pathlib_py.html  z_12bbcc9183fda942_pdb_py.html  z_12bbcc9183fda942_platform_py.html  z_12bbcc9183fda942_random_py.html  z_12bbcc9183fda942_secrets_py.html  z_12bbcc9183fda942_shlex_py.html  z_12bbcc9183fda942_shutil_py.html  z_12bbcc9183fda942_stringprep_py.html  z_12bbcc9183fda942_sysconfig_py.html  (+47 more)
(+6 files in other folders)
