[project]
authors = [{name = "the-farm-guy", email = "thefarmguy011@gmail.com"}]
name = "pixi"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["black>=25.1.0,<26"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pixi = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ruff = ">=0.11.7,<0.12"

[dependency-groups]
test = ["pytest"]
